# blackroad-os-operator

./: .editorconfig  .env.example  .eslintrc.json  .gitignore  .prettierrc  ACCESS_AUDIT.md  AGENTS.md  BROS_CHANGELOG.md  BROS_QUICK_REF.md  BROS_README.md  CECILIA_COMMAND_PAGER.md  CHANGELOG_MEMORY.md  CLAUDE.md  CLOUDFLARE_INFRA.md  DEPLOYMENT_SUMMARY.md  DEPLOY_BITCOIN_LOTTERY_TO_PIS.md  DISTRIBUTED_ARCHITECTURE.md  DNS_AUDIT_LIVE.md  Dockerfile  ECOSYSTEM_INDEX.md  HAILO_VS_NVIDIA_PERFORMANCE.md  HARDWARE_DEPLOYMENT_MAP.md  IMPLEMENTATION_SUMMARY.md  INFRASTRUCTURE_INVENTORY.md  INFRA_STATUS.md  INTEGRATION_COMPLETE.md  KPI_DASHBOARD_SUMMARY.md  LINEAR_NOTION_HF_INTEGRATION.md  MASTER_INVENTORY.md  MINING_JOURNAL.md  Makefile  OCTAVIA_BENCHMARK_RESULTS.md  OCTAVIA_EXTREME_CAPABILITIES.md  OCTAVIA_NEXT_CHALLENGES.md  OCTAVIA_SETUP.md  OCTAVIA_WORLD_RECORD_ACHIEVEMENTS.md  OCTOPRINT_SETUP.md  QUANTUM_ENHANCED_EDGE_AI.md  QUICKSTART_TRINITY_CODEX.md  README.md  (+57 more)
.cadlac/: blackroad-os-operator.prompt.md
.devcontainer/: devcontainer.json
.github/: DEPLOYMENT_SETUP.md  QUICK_REFERENCE.md  REPO_WORKFLOW_TEMPLATE.yml  SECRETS_SETUP.md  labeler.yml
agent-catalog/: agents.yaml
app/: __init__.py  globals.css  layout.tsx  main.py  page.tsx
br_operator/: agent_routing.py  ai_workflow_engine.py  catalog.py  claude_adapter.py  codex_service.py  consensus.py  deploy_service.py  health.py  intent_service.py  (+15 more)
sdks/python/: README.md  pyproject.toml
sdks/python/blackroad/: __init__.py
sdks/python/blackroad/client/: __init__.py
sdks/python/blackroad/models/: __init__.py
(+800 files in other folders)
