[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "blackroad"
version = "0.1.0"
description = "BlackRoad OS Python SDK - AI Governance Platform"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "BlackRoad OS, Inc.", email = "sdk@blackroad.io" }
]
keywords = ["blackroad", "ai", "governance", "agents", "sdk"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.27.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]
all = [
    "websockets>=13.0",
    "numpy>=1.26.0",
]

[project.urls]
Homepage = "https://blackroad.io"
Documentation = "https://developers.blackroad.io"
Repository = "https://github.com/BlackRoad-OS/blackroad-os-api"

[tool.hatch.build.targets.wheel]
packages = ["blackroad"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
